# raspberrypi-openwrt

./: ConfigureOpenWrt.md  HardwareOverview.md  ProjectHome.md  SoftwareDevelopment.md  SoftwareStatus.md
configs/: config-rpi
package/base-files/files/etc/: preinit
package/base-files/files/lib/preinit/: 10_indicate_preinit  50_indicate_regular_preinit
package/brcm2708-gpu-fw/: Makefile
package/kernel/brcm2708-gpu-fw/: Makefile
package/kernel/mac80211/: Makefile
package/network/config/netifd/files/sbin/: ifdown
package/system/ubox/: Makefile
scripts/: feeds  getver.sh
toolchain/eglibc/: Config.in
toolchain/eglibc/patches/2.15/: 001-fix_autoconf_macro.patch  300-glibc-bug-13579.patch
tools/: Makefile
tools/genfatfs/: Makefile
tools/genfatfs/patches/: 000-cmake.patch  010-linux-dir.patch  020-config.patch
tools/genfatfs/src/: CMakeLists.txt  diskio.c  genfatfs.c
tools/genfatfs/src/fatfs/doc/en/: rc.html
tools/genfatfs/src/fatfs/doc/ja/: rc.html
